2018-11-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR3829: arc_priority representation creates an
	implicit limit on character sequence within regexp
	* NEWS: Updated.

2018-09-12  Severin Gehwolf  <sgehwolf@redhat.com>

	PR3829: arc_priority representation creates an
	implicit limit on character sequence within regexp
	* tapset/jstack.stp.in: Workaround limit on regexp
	length with SystemTap >= 3.2.

2017-04-03  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR3828: Architectures unsupported by SystemTap
	tapsets throw a parse error
	Patch by David Smith <dsmith@redhat.com>
	* AUTHORS: Add David Smith.
	* NEWS: Updated.
	* tapset/jstack.stp.in:
	Call the error function if no architecture is matched.

2017-03-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR3827: jstack.stp should support AArch64
	Patch by Andrew Dinn <adinn@redhat.com>
	and Mark Wielaard <mjw@redhat.com>
	* AUTHORS: Add Andrew Dinn.
	* NEWS: Updated.
	* tapset/jstack.stp.in:
	Add AArch64 support.

2021-02-21  Andrew John Hughes  <gnu.andrew@redhat.com>

	PR3825: SystemTap is heavily confused
	by multiple JDKs
	* tapset/hotspot.stp.in,
	* tapset/jstack.stp.in:
	Update unique suffix to match JDK
	version ('end11' instead of 'end8')

2016-07-17  Andrew John Hughes  <gnu.andrew@redhat.com>

	PR3825: SystemTap is heavily confused
	by multiple JDKs
	* AUTHORS: Added Felix Lu.
	* NEWS: Updated.

2016-07-13  Felix Lu  <flu@redhat.com>

	PR3825: SystemTap is heavily confused
	by multiple JDKs
	* tapset/hotspot.stp.in,
	* tapset/jstack.stp.in:
	Use the new private keyword in SystemTap
	>= 3.0 to resolve global variable name
	collision and function overloading
	to select the correct jstack_call at runtime.

2021-01-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR3818: Update elliptic curve patch to
	handle move of SSL curve handling to
	sun.security.ssl.NamedGroup in JDK-8171279
	* NEWS: Updated.
	* patches/pr3818-3curve.patch: Renamed
	from pr3802-3curve.patch. Move