@@ -14,6 +14,7 @@ New in release 6.0.0 (2019-XX-XX):
 
 * New features
   - PR3827: jstack.stp should support AArch64
+  - PR3830: jstack.stp should support ppc64[le,be]
 * SystemTap
   - PR3825: SystemTap is heavily confused by multiple JDKs
   - PR3828: Architectures unsupported by SystemTap tapsets throw a parse error
